main/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dwk-2020-main-svc
spec:
  type: ClusterIP
  selector:
    app: dwk-2020-main
  ports:
    - port: 2344
      protocol: TCP
      targetPort: 80
